--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=, initial-scale=1.0">
   <title>Messagerie Web</title>
-  <link rel="stylesheet" href="css/Courriel.css" type="text/css">
+  <link rel="stylesheet" href="css/style.css" type="text/css">
   <script src="js/forge.min.js"></script>
 </head>
 <body style="height:100%;overflow: hidden;">
@@ -74,7 +74,7 @@
     </div>
   </div>  
 
-  <script src="js/Courriel.js"></script>
+  <script src="js/script.js"></script>
 
 </body>
 </html>
