--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,12 +9,12 @@
   <script src="js/forge.min.js"></script>
 </head>
 <body style="height:100%;overflow: hidden;">
-  <div class ="Titre">
+  <div class ="Title">
     Inlook
     
-    <input type="search"
-    id="recherche"; 
-    onkeyup="recherche()"
+    <input type="searching"
+    id="search"; 
+    onkeyup="search()"
     style="padding:15px;
     border-width: 3px;
     border-color:blue;
@@ -26,48 +26,41 @@
   </div>
 
   <div class="Toolbar">
-    <button class="Nouveau_Message" onclick="NewMail()">
-      
+    <button class="New_Message" onclick="NewMail()">
       New Mail
     </button>
   </div>
   
   <div class="Drop_menu">
-      <label for="Boite"></label>
+      <label for="Mail"></label>
       <select name="Option_menu" id="Option_menu" oninput="Drop_menu();" style="padding: 10px; background:#5ea9f4; width: 100%;height: 105%;border-radius: 5px;">
-        <option value="Boite de réception">Inbox</option>
-        <option value="Emails envoyés">Sent</option>
+        <option value="Inbox">Inbox</option>
+        <option value="Emails sent">Sent</option>
       </select>
   </div>
 
-  <div class="Aperçu_email">
-    <div id="formulaire" style="display:none;">
-      <label for="Adresse">To:</label><br>
-      <input type="text" id="Adresse" name="Adresse"
+  <div class="Email_form">
+    <div id="form" style="display:none;">
+      <label for="Address">To:</label><br>
+      <input type="text" id="Address" name="Address"
       style ="width:98%; margin-left: 5px;"><br>
-      <label for="Titre">Subject:</label><br>
-      <input type="text" id="Titre" name="Titre"
+      <label for="Title">Subject:</label><br>
+      <input type="text" id="Title" name="Title"
       style ="width:98%; margin-left: 5px;">
-      <label for="Contenu">Content:</label><br>
-      <textarea style="margin-left:5px;" id="Contenu" name="Contenu" rows="19" cols="111">
+      <label for="Content">Content:</label><br>
+      <textarea style="margin-left:5px;" id="Content" name="Content" rows="19" cols="111">
       </textarea><br>
-      <button style="margin-left: 5px; height:27px;" onclick="addMail()">
-       Send &rArr;
-      </button>
-      <button style="height: 27px; margin-top: 8px;" onclick="deleteMail()">
-       Cancel &#10007;
-      </button>
     </div>
  </div>
 
-  <div class="Courriels">
-    <div class="liste" id="Recu">
+  <div class="Emails">
+    <div class="list" id="Received">
       <a></a>
       <p style="display:none">Content</p>
     </div>
 
-    <div class="liste" id="Envoyes">
-      <div class="Carte">
+    <div class="list" id="Sent">
+      <div class="Card">
        <a></a>
        <p style="display:none">Content</p>
       </div>
