--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,84 +1,144 @@
-.Title{
-    background-color: black;
-    padding: 15px;
-    color:white;
-    font-weight: bold;
-    font-size: 34px;
-    vertical-align: middle;
-    border-radius: 10px;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ; 
+body {
+  height: 100%;
+  overflow: hidden;
+}
+
+.Title {
+  background-color: black;
+  padding: 15px;
+  color: white;
+  font-weight: bold;
+  font-size: 34px;
+  vertical-align: middle;
+  border-radius: 10px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+#search {
+  padding: 15px;
+  border: 3px solid blue;
+  border-radius: 10px;
+  vertical-align: middle;
+  width: 80%;
+}
+
+.Toolbar {
+  padding: 10px;
+  margin-top: 10px;
+  background-color: white;
+  box-shadow: 1px 1px 3px 3px rgb(207, 207, 207);
+  border-radius: 5px;
+}
+
+.New_Message {
+  background-color: rgb(29, 155, 240);
+  padding: 10px;
+  color: white;
+  border-color: rgb(207, 207, 207);
+  border-radius: 15px;
+  font-size: 15px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.Refresh {
+  background-color: rgb(128, 128, 128);
+  padding: 10px;
+  color: white;
+  border-color: rgb(207, 207, 207);
+  border-radius: 15px;
+  font-size: 15px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.Drop_menu {
+  float: left;
+  border-radius: 5px;
+  border-color: black;
+  font-size: 30px;
+  vertical-align: middle;
+  margin-top: 10px;
+  width: 35%;
+  height: 46px;
+  box-shadow: 1px 1px 3px 3px rgb(207, 207, 207);
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+#Option_menu {
+  padding: 10px;
+  background: #5ea9f4;
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.list {
+  margin: 0;
+  padding: 0;
+  position: fixed;
+  overflow-y: scroll; 
+  height: 60vh;
+  width: 34%;
+}
+
+a:hover {
+  display: block;
+  width: 99%;
+  background-color: rgb(207, 207, 207);
+  cursor: default;
+}
+
+.Emails {
+  float: left;
+  border-radius: 5px;
+  border-color: black;
+  font-size: 24px;
+  margin-top: 10px;
+  width: 35%;
+  height: 450px;
+  box-shadow: 1px 1px 3px 3px rgb(207, 207, 207);
+}
+
+.Card {
+  margin-top: 1px;
+  border: 1px solid black;
+  cursor: pointer;
+}
+
+.Email_form {
+  float: right;
+  box-shadow: 1px 1px 3px 3px rgb(207, 207, 207);
+  border-radius: 5px;
+  font-size: 24px;
+  margin-top: 10px;
+  width: 64%;
+  height: 507px;
+}
+
+#form {
+  display: none;
+}
+
+#Address, #Title, #Content {
+  width: 98%;
+  margin-left: 5px;
+}
+
+@media (max-width: 768px) {
+  /* Apply styles for screens with a maximum width of 768px */
+  .Emails, .list, .Email_form {
+    width: 100%; /* Expand the container to full width */
+    height: auto; /* Allow the container to grow based on content */
   }
-  
-  .Toolbar{
-    padding:10px;
-    margin-top: 20px;
-    background-color: white;
-    box-shadow: 1px  1px 3px 3px rgb(207, 207, 207);
-    border-radius: 5px;
+
+  #form {
+    display: block; /* Show the email form on smaller screens */
   }
-  
-  .New_Message{
-    background-color: rgb(29,155,240);
-    padding:10px;
-    color: white;
-    border-color: rgb(207, 207, 207);
-    border-radius: 15px;
-    font-size: 15px;
-    font-weight: bold;
-    cursor: pointer;
+
+  #Address, #Title, #Content {
+    width: 90%; /* Adjust input and textarea width on smaller screens */
   }
-  
-  .Drop_menu{
-    float: left;
-    border-radius: 5px;
-    border-color: black;
-    font-size: 30px;
-    vertical-align: middle;
-    margin-top: 10px;
-    width: 35%;
-    height: 46px;
-    box-shadow: 1px  1px 3px 3px rgb(207, 207, 207);
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
-  }
-  
-  .list{
-    margin: 0;
-    padding: 0;
-    position: fixed;
-    overflow: auto;
-    height: 475px;
-    width:34%;
-  }
-  
-  a:hover{
-    display: block;
-    width: 99%;
-    background-color: rgb(207, 207, 207);
-    cursor: default;
-  }
-  
-  .Emails{
-    float: left;
-    border-radius: 5px;
-    border-color: black;
-    font-size: 24px;
-    margin-top: 10px;
-    width: 35%;
-    height: 475px;
-    box-shadow: 1px  1px 3px 3px rgb(207, 207, 207);
-  }
-  
-  .Card{
-    margin-top: 1px;
-    border: 1px dashed black;
-  }
-  
-  .Email_form{
-    float: right;
-    box-shadow: 1px  1px 3px 3px rgb(207, 207, 207);
-    border-radius: 5px;
-    font-size: 24px;
-    margin-top: 10px;
-    width: 64%;
-    height: 531px;
-  }
+}
