--- a/public/css/style.css
+++ b/public/css/style.css
@@ -79,6 +79,7 @@ body {
   margin: 0;
   padding: 0;
   position: fixed;
+  overflow-x: hidden;
   overflow-y: scroll; 
   height: 60vh;
   width: 34%;
